--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -6,11 +6,9 @@ En este capítulo se presentan los resultados de la investigación mostrada en M
 
 \subsection{Resultados del Estudio 1}\label{sec:resultados-estudio-1}
 
-\subsubsection{Frecuencia Cardiaca}
+\subsubsection{Frecuencia Cardíaca}
 
-{\color{blue} Sobre el tema del acento: https://www.revespcardiol.org/es-cardiaco-o-cardiaco-articulo-S0300893217305031}
-
-A continuación, se muestra el análisis de la varianza realizado para la \textit{Frecuencia Cardiaca}, la \textit{Frecuencia Cardiaca Escalada} y la \textit{Frecuencia Cardiaca Transformada por Cuantiles} entre pacientes que sufren DETERIORO y los que no. Se ha realizado el análisis de la varianza para cada una de las medias horarias. El resultado se muestra en la Tabla~\ref{tab:mean-FC}.  
+A continuación, se muestra el análisis de la varianza realizado para la \textit{Frecuencia Cardíaca}, la \textit{Frecuencia Cardíaca Escalada} y la \textit{Frecuencia Cardíaca Transformada por Cuantiles} entre pacientes que sufren DETERIORO y los que no. Se ha realizado el análisis de la varianza para cada una de las medias horarias. El resultado se muestra en la Tabla~\ref{tab:mean-FC}.  
 
 
 \begin{table}[H]
@@ -47,10 +45,10 @@ A continuación, se muestra el análisis de la varianza realizado para la \texti
         MEAN\_24 & 0.204 & 0.187 & 0.95 \\
         \hline
     \end{tabular}
-    \caption{p-valor de la media horaria de la \textit{Frecuencia Cardiaca} y la \textit{Frecuencia Cardiaca Transformada por Cuantiles} entre pacientes que sufren OAF y los que no}\label{tab:mean-FC}
+    \caption{p-valor de la media horaria de la \textit{Frecuencia Cardíaca} y la \textit{Frecuencia Cardíaca Transformada por Cuantiles} entre pacientes que sufren OAF y los que no}\label{tab:mean-FC}
 \end{table}
 
-De manera gráfica el resultado es el siguiente mostrado en la Figura~\ref{fig:mean-FC}. Se han añadido dos rectas verticales que muestran el nivel del valor $\alpha$ = 0.05 y $\alpha$ = 0.001. {\color{blue} ¿0.01?}Se puede observar que la mayoría de las medias horarias no son significativas, por lo que no se puede rechazar la hipótesis nula. Esto significa que no hay diferencias significativas entre las medias horarias de la \textit{Frecuencia Cardíaca} entre pacientes que sufren DETERIORO y los que no.
+De manera gráfica el resultado es el siguiente mostrado en la Figura~\ref{fig:mean-FC}. Se han añadido dos rectas verticales que muestran el nivel del valor $\alpha$ = 0.05 y $\alpha$ = 0.001. ($\alpha$ = 0.01 se excluye del gráfico ya que a pesar de ser un nivel de significancia ampliamente utilizado, haría que el gráfico se viese peor al amontonarse las líneas verticales en la parte inferior de la imagen). Se puede observar que la mayoría de las medias horarias no son significativas, por lo que no se puede rechazar la hipótesis nula. Esto significa que no hay diferencias significativas entre las medias horarias de la \textit{Frecuencia Cardíaca} entre pacientes que sufren DETERIORO y los que no.
 
 Se puede observar como de manera general que a los pacientes que se les suministra OAF tienen una mayor \textit{Frecuencia Cardíaca} que los que no. Esto se puede observar en la Figura~\ref{fig:fc-boxplot-mean}, aun así no se puede afirmar que esto tenga un efecto significativo de manera general en toda la monitorización del paciente.
 
@@ -59,7 +57,7 @@ Las medias más significativas son las referentes a las horas 12 y 23. Esta situ
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 1]{./img/mean-FC.png}
-    \caption{p-valor de la media horaria de la \textit{Frecuencia Cardiaca} entre pacientes que sufren DETERIORO y los que no}
+    \caption{p-valor de la media horaria de la \textit{Frecuencia Cardíaca} entre pacientes que sufren DETERIORO y los que no}
     \label{fig:mean-FC}
 \end{figure}
 
@@ -163,11 +161,11 @@ En esta sección de resultados, presentaremos los hallazgos obtenidos en el \tex
 \paragraph{Leyenda de los gráficos}
 
 \begin{enumerate}
-    \item \textbf{Frecuencia Cardiaca}: \textit{HR}.
+    \item \textbf{Frecuencia Cardíaca}: \textit{HR}.
     \item \textbf{Saturación de Oxígeno}: \textit{SpO2}.
     \item \textbf{Frecuencia Cardíaca Escalada}: \textit{HR\_scaled}.
     \item \textbf{Saturación de Oxígeno Escalada}: \textit{SpO2\_scaled}.
-    \item \textbf{Frecuencia Cardiaca Transformada por Cuantiles}: \textit{HR\_quantile}.
+    \item \textbf{Frecuencia Cardíaca Transformada por Cuantiles}: \textit{HR\_quantile}.
 \end{enumerate}
 
 
