--- a/main.tex
+++ b/main.tex
@@ -330,7 +330,7 @@ every picture/.append style={
 \thispagestyle{empty}
 
 % La portada se inserta mediante el comando \includepdf seguido del archivo PDF correspondiente (que se ajusta automáticamente a las dimensiones de la página):
-\includepdf{Portada_TFG.pdf}
+\includepdf[fitpaper=true]{Portada_TFG.pdf}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -377,6 +377,8 @@ Doy gracias a mi novia Mariona, por estar a mi lado en todo momento y por ser mi
 Gracias a mis compañeros Pablo y Ana de la universidad de Aalto por su apoyo y compañía en la elaboración de este trabajo. 
 
 Gracias a Jose Manuel y Alberto por invitarme a la Universidad de Alcalá, por a presentarme a su equipo y darme la oportunidad de presentar mi trabajo frente a ellos.
+
+Gracias a mis amigos y compañeros de la ETSII por ser amigos y compañeros de camino.
 
 Gracias a Pablo Garrido, por ser un educador referente en la Universidad Politécnica de Madrid, por motivarnos y enseñarnos todos los días qué significa ser ingeniero, por hacernos ver que con una ingeniería se puede y por ser un ejemplo a seguir.
 
