Updates from Overleaf

--- a/lib/chapter7.tex
+++ b/lib/chapter7.tex
@@ -196,7 +196,7 @@ En lo que respecta a los costos relacionados con los recursos humanos asignados 
     Trabajo asesoría Médico Rosa Rodríguez & 10 & 20 & 200 €  \\
     Trabajo asesoría Médico Felipe Gonzalez Fernández & 20 & 20 & 400 € \\
     Trabajo asesoría tutor TFM Carolina García & 20 & 20 &  400 € \\
-    Trabajo asesoría tutor TFM Andres M. Alonso & 20 & 20 &  400 € \\
+    Trabajo asesoría tutor TFM Andrés M. Alonso & 20 & 20 &  400 € \\
     Corrección y supervisión tutores TFG & 10 & 20 & 200 € \\
     \midrule
     Total & & & 10850 € \\
